--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.1"
+data-encoding = "2.2.1"
+sawtooth-sdk = "0.4.4"
+sha2 = "0.8.2"
