Updates docker compose setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,8 @@
---- # ------------------------------------------------------------------------------
-
-# Copyright 2017 Intel Corporation
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-version: "2.1"
+version: "3.7"
 
 services:
   settings-tp:
-    image: hyperledger/sawtooth-settings-tp:1.1
+    image: hyperledger/sawtooth-settings-tp:latest
     container_name: sawtooth-settings-tp
     depends_on:
       - validator
@@ -26,7 +11,6 @@ services:
   alica-messages-tp:
     image: sst/sawtooth-alica-messages-tp:latest
     container_name: sawtooth-alica-messages-tp
-    build: .
     depends_on:
       - validator
     entrypoint: alica-messages-tp -C tcp://validator:4004
@@ -39,7 +23,7 @@ services:
     entrypoint: bash -c "tail -f /dev/null"
 
   validator:
-    image: hyperledger/sawtooth-validator:1.1
+    image: hyperledger/sawtooth-validator:latest
     container_name: sawtooth-validator
     expose:
       - 4004
@@ -47,26 +31,31 @@ services:
       - "4004:4004"
     # start the validator with an empty genesis batch
     entrypoint: "bash -c \"\
-      sawadm keygen && \
-      sawtooth keygen my_key && \
-      sawset genesis -k /root/.sawtooth/keys/my_key.priv && \
-      sawadm genesis config-genesis.batch && \
-      sawtooth-validator -vv \
-      --endpoint tcp://validator:8800 \
-      --bind component:tcp://eth0:4004 \
-      --bind network:tcp://eth0:8800 \
-      --bind consensus:tcp://eth0:5050 \
-      \""
+        sawadm keygen && \
+        sawtooth keygen my_key && \
+        sawset genesis -k /root/.sawtooth/keys/my_key.priv && \
+        sawset proposal create \
+          -k /root/.sawtooth/keys/my_key.priv \
+          sawtooth.consensus.algorithm.name=Devmode \
+          sawtooth.consensus.algorithm.version=0.1 \
+          -o config.batch && \
+        sawadm genesis config-genesis.batch config.batch && \
+        sawtooth-validator -vv \
+          --endpoint tcp://validator:8800 \
+          --bind component:tcp://eth0:4004 \
+          --bind network:tcp://eth0:8800 \
+          --bind consensus:tcp://eth0:5050 \
+        \""
 
   devmode-engine:
-    image: hyperledger/sawtooth-devmode-engine-rust:1.1
+    image: hyperledger/sawtooth-devmode-engine-rust:latest
     container_name: sawtooth-devmode-engine
     depends_on:
       - validator
     entrypoint: devmode-engine-rust -C tcp://validator:5050
 
   rest-api:
-    image: hyperledger/sawtooth-rest-api:1.1
+    image: hyperledger/sawtooth-rest-api:latest
     container_name: sawtooth-rest-api
     ports:
       - "8008:8008"
@@ -75,7 +64,7 @@ services:
     entrypoint: sawtooth-rest-api -C tcp://validator:4004 --bind rest-api:8008
 
   shell:
-    image: hyperledger/sawtooth-all:1.1
+    image: hyperledger/sawtooth-all:latest
     container_name: sawtooth-shell
     depends_on:
       - rest-api
