--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "alica-messages-tp"
-version = "0.1.0"
 authors = ["Sven Starcke <sst97@gmx.net>"]
 edition = "2018"
+name = "alica-messages-tp"
+version = "0.1.0"
 
 [dependencies]
 clap = "2.33.3"
 data-encoding = "2.3.1"
 mockall = "0.8.3"
+sawtooth-alica-message-transaction-payload = {version = "0.1.0", git = "https://gitlab.com/sst97/sawtooth-alica-message-transaction-payload.git"}
 sawtooth-sdk = "0.5.0"
 sha2 = "0.9.2"
-json = "0.12.4"
