--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ version = "0.1.0"
 clap = "2.33.3"
 data-encoding = "2.3.1"
 mockall = "0.8.3"
-sawtooth-alica-message-transaction-payload = {version = "0.1.0", git = "https://gitlab.com/sst97/sawtooth-alica-message-transaction-payload.git"}
+sawtooth-alica-payload = {version = "0.1.0", git = "https://github.com/DiCoreSystems/sawtooth-alica-payload.git"}
 sawtooth-sdk = "0.5.0"
 sha2 = "0.9.2"
